# polytri

./: CMakeLists.txt  README.md  shape.data
src/: monotone_partitioning.cc  polygon_triangulation.cc  polygon_triangulation.h  polytri-cli.cc  trapezoidal_decomposition.cc
tools/: polygon.html
tools/css/: index.css
tools/js/: common.js  data.js  polygons.js
